--- a/style.css
+++ b/style.css
@@ -53,5 +53,20 @@ a {
   font-weight: bold;
 }
 
+.absolute{
+    position: absolute;
+}
+.hero-section{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 4rem auto;
+    gap: 5rem;
+    padding: 0 1rem;
+    padding-bottom: 8rem;
+}
 
-
+.fadded-text{
+    user-select: none;
+}
