--- a/style.css
+++ b/style.css
@@ -105,8 +105,8 @@ a {
   }
   50% {
     filter: grayscale(1);
-    transform: scale(1.1); 
-    box-shadow: 3px 3px 10px black;   
+    transform: scale(1.1);
+    box-shadow: 3px 3px 10px black;
   }
   100% {
     filter: grayscale(0);
@@ -211,19 +211,19 @@ a {
   }
 }
 
-.project-section{
+.project-section {
   background-color: rgb(231, 231, 231);
   margin-top: 4rem;
 }
 
-.page-header{
+.page-header {
   color: #e84949;
   font-size: 90px;
   text-align: center;
   padding-top: 30px;
 }
 
-.project-container{
+.project-container {
   max-width: 1200px;
   margin: 0 auto;
   padding: 3rem 0;
@@ -232,13 +232,248 @@ a {
   gap: 120px;
 }
 
-.project-card{
+.project-card {
   width: 90%;
   height: 550px;
-  background-image: url(images/projects/Project1.png);
   background-size: cover;
-  background-repeat: no-repeat; 
+  background-repeat: no-repeat;
+  position: relative;
+  box-shadow: 0px 0px 40px #1f1f1f;
 }
 
+#project1 {
+  background-image: url(images/projects/Project1.png);
+  margin-left: 18%;
+}
 
+#project2 {
+  background-image: url(images/projects/Project2.png);
+  margin-right: 18%;
+}
+#project3 {
+  background-image: url(images/projects/Project3.png);
+  margin-left: 18%;
+}
+#project4 {
+  background-image: url(images/projects/Project4.png);
+  margin-right: 18%;
+}
 
+.project-card::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #1f1f1f9b;
+  transform: scaleX(1);
+}
+
+.project-card::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background: linear-gradient(45deg, #343d689a, #343d689b, #343d687c);
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: 1s;
+}
+
+.project-card:hover::before {
+  transform: scaleX(1);
+  /* background-color: red !important; */
+}
+
+.project-number {
+  font-size: 200px;
+  position: absolute;
+  font-weight: 500;
+  color: #fff;
+  z-index: 1;
+  display: none;
+  transition: 1s;
+}
+.project-number-left {
+  left: -40px;
+  top: -45px;
+}
+
+.project-number-right {
+  right: -40px;
+  top: -45px;
+}
+
+.project-card:hover .project-number {
+  display: block;
+}
+.project-contect {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  color: #fff;
+  padding: 2em;
+  bottom: 20%;
+  z-index: 5;
+  transform: scale(1);
+  transition: 0.5s;
+}
+
+.project-card:hover .project-contect {
+  transform: scale(1.1);
+}
+
+.project-contect-left {
+  left: 10%;
+}
+.project-contect-right {
+  right: 10%;
+}
+
+.project-skills {
+  width: 40px;
+}
+.project-skills-contaoner {
+  width: 60%;
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+@media (max-width: 1140px) {
+  #project1,
+  #project2,
+  #project3,
+  #project4 {
+    margin: 0px auto;
+    width: 95%;
+    height: 300px;
+  }
+}
+
+.stack-section {
+  max-width: 1200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  padding: 10rem 0;
+  gap: 20px;
+  position: relative;
+}
+
+.stack-faded-text{
+  font-size: 10rem;
+  color: rgb(231, 231, 231);
+  position: absolute;
+  bottom: -5%;
+  right: -29%;
+  user-select: none;
+}
+.stack-image {
+  width: 80px;
+  transition: 0.7s;
+}
+.stack-image:hover {
+  transform: scale(1.2);
+}
+.stack-left-part {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  width: 50%;
+}
+.stack-heading {
+  color: #e84949;
+  font-weight: 200;
+  font-size: 28px;
+}
+.heading-first-letter {
+  font-weight: bold;
+  font-size: 75px;
+}
+.stack-content {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  line-height: 26px;
+}
+.stack-right-part {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  width: 50%;
+  position: relative;
+}
+.images {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+}
+.bg {
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-image: url(images/userAsset/blob\ vector.png);
+  width: 400px;
+  height: 400px;
+  background-repeat: no-repeat;
+  position: absolute;
+  background-size: contain;
+  z-index: -1;
+  animation: bg1 5s infinite;
+}
+@keyframes bg1 {
+  0% {
+    left: 50%;
+  }
+  50% {
+    left: 60%;
+  }
+  100% {
+    left: 50%;
+  }
+}
+
+.comtact-me-section {
+  background-color: rgb(231, 231, 231);
+}
+.comtact-me {
+  display: flex;
+  flex-direction: column; 
+  gap: 5px;
+  padding: 1rem 0;
+}
+.contact-header{
+  color: #e84949;
+  font-size: 5rem;
+  font-weight: 500;
+}
+.contact-sub-header{
+  color: rgba(52, 61, 104, 0.6);
+  font-size: 3rem;
+  font-weight: 500;
+}
+
+.contact-form{
+  display: flex;
+  flex-direction: column;
+  width: 80%;
+  gap: 10px;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+.contact-form-input{  
+  padding: 0.8rem 2rem;
+  background-color: rgba(245, 245, 245);
+  box-shadow: 0px 0px 3px  #000;
+  border: none;
+  border-radius: 10px;
+  font-size: 1.2rem;
+}
+.contact-form-input:focus{
+  border: 1px solid #000;
+}
